Fix squished thumbnails

--- a/static/css/components/searchResultItemCta.less
+++ b/static/css/components/searchResultItemCta.less
@@ -24,8 +24,10 @@
 }
 
 @media only screen and (min-width: @width-breakpoint-tablet) {
-  .searchResultItemCTA {
-    width: 245px;
-    padding: 0 5px 0 15px;
+  .searchResultItem {
+    .searchResultItemCTA {
+      width: 30%;
+      padding: 0 5px 0 15px;
+    }
   }
 }
