--- a/static/css/legacy.less
+++ b/static/css/legacy.less
@@ -2399,9 +2399,6 @@ span.actions {
 ul#siteSearch {
   > li {
     .display-flex();
-    span.bookcover img {
-      width: 100%;
-    }
   }
   span.resultTitle {
     display: block;
